# Nearlighter

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  main.cpp  note.md
cmake/: smart_copy.cmake
doc/: hit-calculation.md  note.md  tests-note.md  weird.ppm
doc/figs/: shapehit_calculate.drawio
include/nearlighter/: nearlighter.h
include/nearlighter/accel/: bvh_node.h
include/nearlighter/base/: color.h  image.h  interval.h  onb.h  ray.h  timer.h
include/nearlighter/geometry/: aabb.h  all.h  quad.h  shape.h  shape_list.h  sphere.h
include/nearlighter/io/: console_io.h  image_io.h
include/nearlighter/material/: all.h  dielectric.h  diffuse_light.h  isotropic.h  lambertian.h  material.h  metal.h
include/nearlighter/math/: mat4f.h  math.h  random.h  vec3f.h
include/nearlighter/medium/: constant_medium.h
include/nearlighter/render/: camera.h  render_settings.h  renderer.h
include/nearlighter/sampling/: pdf.h  sampler.h
include/nearlighter/scene/: scene.h
include/nearlighter/texture/: all.h  checker_texture.h  image_texture.h  noise_texture.h  perlin.h  solid_texture.h  texture.h
include/nearlighter/transform/: rotate.h  transform.h  translate.h
lib/: utils.cpp  utils.h  vec3f.h
src/: camera.cpp  camera.h  color.cpp  color.h  common.h  interval.cpp  interval.h  legacy_scenes.cpp  legacy_scenes.h  main.cpp  ray.h  scene.cpp  scene.h  shapelist.h  vec3f.h
src/bvh/: aabb.cpp  aabb.h  bvhnode.cpp  bvhnode.h
src/camera/: camera.cpp  camera.h
src/general/: color.cpp  interval.cpp  interval.h  mat4f.h  onb.h  ray.h  vec3f.h
src/material/: dielectric.h  diffuselight.h  isotropic.h  lambertian.h  material.h  metal.h
src/medium/: constant_medium.cpp  constant_medium.h
src/nearlighter/accel/: bvh_node.cpp
src/nearlighter/base/: color.cpp  image.cpp  interval.cpp
src/nearlighter/geometry/: aabb.cpp  quad.cpp  shape_list.cpp  sphere.cpp
src/nearlighter/io/: console_io.cpp  image_io.cpp  image_loader.cpp
src/nearlighter/material/: dielectric.cpp  diffuse_light.cpp  isotropic.cpp  lambertian.cpp  material.cpp  metal.cpp
src/nearlighter/medium/: constant_medium.cpp
src/nearlighter/render/: camera.cpp  renderer.cpp
src/nearlighter/sampling/: sampler.cpp
src/nearlighter/scene/: scene.cpp
src/nearlighter/texture/: checker_texture.cpp  image_texture.cpp  noise_texture.cpp  perlin.cpp  solid_texture.cpp
src/shape/: quad.cpp  quad.h  shape.h  shapelist.h  sphere.cpp  sphere.h
src/shape/transform/: rotate.h  translate.h
src/texture/: checker.h  image.h  noise.h  texture.h
src/utils/: constant.h  imageloader.cpp  imageloader.h  math.h  pdf.h  perlin.cpp  perlin.h  random.h
tests/: bvh_tests.cpp  geometry_tests.cpp  renderer_smoke_tests.cpp  sampler_tests.cpp  test_support.h
